# pfc_model

./: README.md  pyproject.toml  test.toml  test1.toml
Tutorial/: Tutorial-1.ipynb  Tutorial-2.ipynb  Tutorial-3.ipynb
example/: example1.py
results/: description_membparams.txt  spikingcells_fraction.txt  spikingcells_membparams.txt
src/pfc_model/: __init__.py  _auxiliar.py  _auxiliary.py  _basics_setup.py  _network_auxiliar.py  _network_auxiliar2.py  _network_auxiliary.py  _network_setup.py  analyses_tools.py  basics_setup.py  cortex_setup.py  network_setup.py  tests.py
src/pfc_model/Replication_Hass-et-al/: tasks.py
src/pfc_model/analysis/: __init__.py  synchrony.py  tools.py  up_down.py
src/pfc_model/replication/: Original_spiketime.txt  __init__.py  spikingcells_pcon.txt  spikingcells_synparams.txt  task1.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py  taskset.py
src/pfc_model/replication_hass/: _figures.py  tasks.py
