[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "pfc_model"
version = "0.0.1"
authors = [
  { name="Marcelo Rempel", email="marcelo.rafael@hotmail.com" },
]
description = "A prefrontal cortex computational model."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "None"
"Bug Tracker" = "None"
