[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "pfc_model"
version = "0.0.2"
authors = [
  { name="Marcelo Rempel", email="marcelo.rafael@hotmail.com" },
]
description = "A prefrontal cortex computational model."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies =[
    "numpy>=1.23.5",
    "matplotlib>=3.5.2",
    "pandas>=1.5.2",
    "brian2>=2.5.1",
    "scipy>=1.9.3",
    "xarray>=2022.12.0",
    "hmmlearn@git+https://github.com/hmmlearn/hmmlearn",
    "seaborn>=0.12.2",
    "toml>=0.10.2"
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
"Homepage" = "None"
"Bug Tracker" = "None"
