[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[project]
name = "pfc_model"
version = "0.1.0"
authors = [
  { name="Marcelo Rempel", email="marcelo.rafael@hotmail.com" },
]
description = "A prefrontal cortex computational model."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies =[
    "numpy>=1.24.2",
    "matplotlib>=3.7.1",
    "pandas>=1.5.3",
    "brian2>=2.5.1",
    "scipy>=1.10.1",
    "xarray>=2023.3.0",
    "seaborn>=0.12.2",
    "toml>=0.10.2",
    "hmmlearn>=0.3.0",
    "notebook>=3.11.3"
]


[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
"Homepage" = "None"
"Bug Tracker" = "None"
